# mediator

./: CMakeLists.txt  main.cpp
include/: BaseComponent.hpp  Component1.hpp  Component2.hpp  ConcreteMediator.hpp  Mediator.hpp
src/: BaseComponent.cpp  Component1.cpp  Component2.cpp  ConcreteMediator.cpp
